--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
   }
   
   body {
-    @apply m-0 p-0 font-sans antialiased bg-gradient-to-br from-blue-50 via-white to-purple-50 text-gray-900;
+    @apply m-0 p-0 font-sans antialiased bg-gradient-to-br from-blue-50 via-white to-purple-50 text-gray-900 select-none;
   }
 
   html {
